--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>부동산의 모든 것</title>
+  <title>BuyToLive | 부동산의 모든 것</title>
 
   <!-- 네이버 소유확인 -->
   <meta name="naver-site-verification" content="89744d9c036ee55b7870cfdb2370384d60be22f7">
@@ -15,6 +15,6 @@
   <meta http-equiv="refresh" content="1; url=/land/">
 </head>
 <body>
-  <p>부동산의 모든 것 메인 페이지로 이동합니다… <a href="/land/">바로 가기</a></p>
+  <p>BuyToLive | 부동산의 모든 것 메인 페이지로 이동합니다… <a href="/land/">바로 가기</a></p>
 </body>
 </html>
